<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="all">
        <item
            android:id="@+id/navigation1"
            android:checked="false"
            android:icon="@drawable/ic_beranda"
            android:title="@string/navigation_view_item_pasien_1" />
    </group>

    <item
        android:id="@+id/navigasi_kategori_1"
        android:title="@string/navigasi_kategori_admin_1">
        <menu>
            <item
                android:id="@+id/navigation4"
                android:checked="false"
                android:icon="@drawable/ic_view"
                android:title="@string/navigation_view_item_pasien_2" />

        </menu>
    </item>


    <item
        android:id="@+id/navigasi_kategori_3"
        android:title="@string/navigasi_kategori_admin_3">
        <menu>
            <item
                android:id="@+id/navigation7"
                android:checked="false"
                android:icon="@drawable/ic_profil"
                android:title="@string/navigation_view_item_admin_7" />
            <item
                android:id="@+id/navigation8"
                android:checked="false"
                android:icon="@drawable/ic_about"
                android:title="@string/navigation_view_item_admin_8" />
            <item
                android:id="@+id/navigation9"
                android:checked="false"
                android:icon="@drawable/ic_keluar"
                android:title="@string/navigation_view_item_admin_9" />

        </menu>
    </item>

</menu>

